--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     function sprawdzHaslo() {
       const haslo = document.getElementById("haslo").value;
       const poprawneHaslo = "tajne123";
-      const przekierowanie = "https://i.imgur.com/ZAB2KLh.png";
+      const przekierowanie = "https://i.imgur.com/c503M4G.png";
 
       if (haslo === poprawneHaslo) {
         window.location.href = przekierowanie;
