--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </style>
 </head>
 <body>
-  <h1>Wprowadź hasło, aby kontynuować</h1>
+  <h1>Enter the password to continue</h1>
   <input type="password" id="haslo" placeholder="Hasło">
   <br>
   <button onclick="sprawdzHaslo()">Wejdź</button>
