--- a/index.html
+++ b/index.html
@@ -161,14 +161,13 @@
       <h1>📸 My Photos</h1>
       
       <div class="gallery">
-        <!-- WKLEJ TUTAJ SWOJE PRAWDZIWE LINKI CLOUDINARY -->
-        <div class="photo-item" onclick="showModal('LINK_DO_ZDJECIA_1')">
-          <img src="LINK_DO_ZDJECIA_1" alt="Photo 1" onerror="this.parentElement.style.display='none'">
+        <div class="photo-item" onclick="showModal('https://collection.cloudinary.com/dhoheen6w/e0bdca58b21b0d6828f8c885c64722dc')">
+          <img src="https://collection.cloudinary.com/dhoheen6w/e0bdca58b21b0d6828f8c885c64722dc" alt="Photo 1" onerror="this.parentElement.style.display='none'">
           <div class="photo-caption">Photo 1</div>
         </div>
         
-        <div class="photo-item" onclick="showModal('LINK_DO_ZDJECIA_2')">
-          <img src="LINK_DO_ZDJECIA_2" alt="Photo 2" onerror="this.parentElement.style.display='none'">
+        <div class="photo-item" onclick="showModal('https://collection.cloudinary.com/dhoheen6w/fae7cc6056c525be26c189c181880afd')">
+          <img src="https://collection.cloudinary.com/dhoheen6w/fae7cc6056c525be26c189c181880afd" alt="Photo 2" onerror="this.parentElement.style.display='none'">
           <div class="photo-caption">Photo 2</div>
         </div>
       </div>
