--- a/index.html
+++ b/index.html
@@ -161,14 +161,14 @@
       <h1>📸 My Photos</h1>
       
       <div class="gallery">
-        <div class="photo-item" onclick="showModal('https://collection.cloudinary.com/dhoheen6w/e0bdca58b21b0d6828f8c885c64722dc')">
-          <img src="https://collection.cloudinary.com/dhoheen6w/e0bdca58b21b0d6828f8c885c64722dc" alt="Photo 1" onerror="this.parentElement.style.display='none'">
-          <div class="photo-caption">Photo 1</div>
+        <div class="photo-item" onclick="showModal('https://res.cloudinary.com/dhoheen6w/image/upload/v1749976603/20250614_214311_nnvkfs.jpg')">
+          <img src="https://res.cloudinary.com/dhoheen6w/image/upload/v1749976603/20250614_214311_nnvkfs.jpg" alt="Mirror photo" onerror="this.parentElement.style.display='none'">
+          <div class="photo-caption">Mirror</div>
         </div>
         
-        <div class="photo-item" onclick="showModal('https://collection.cloudinary.com/dhoheen6w/fae7cc6056c525be26c189c181880afd')">
-          <img src="https://collection.cloudinary.com/dhoheen6w/fae7cc6056c525be26c189c181880afd" alt="Photo 2" onerror="this.parentElement.style.display='none'">
-          <div class="photo-caption">Photo 2</div>
+        <div class="photo-item" onclick="showModal('https://res.cloudinary.com/dhoheen6w/image/upload/v1749976667/20250614_142712_nmhnj1.jpg')">
+          <img src="https://res.cloudinary.com/dhoheen6w/image/upload/v1749976667/20250614_142712_nmhnj1.jpg" alt="Garden photo" onerror="this.parentElement.style.display='none'">
+          <div class="photo-caption">Garden</div>
         </div>
       </div>
     </div>
