--- a/index.html
+++ b/index.html
@@ -340,7 +340,7 @@
   <script>
     function sprawdzHaslo() {
       const haslo = document.getElementById("haslo").value;
-      const poprawneHaslo = "London2025";
+      const poprawneHaslo = "Home225";
       
       if (haslo === poprawneHaslo) {
         document.getElementById("loginForm").classList.add("hidden");
